@@ -1,3 +1,8 @@
+Sat Jul 27 07:38:32 CDT 2002 Pradeep Gore <pradeep@oomworks.com>
+
+	* docs/releasenotes/index.html:
+	  Updated with a note announcing start of work Real-Time Notification.
+
 Sat Jul 27 20:11:58 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* orbsvcs/tests/AVStreams/Bidirectional_Flows/sender.cpp:
